Fixed logo distortion and made background look good

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -76,12 +76,13 @@ $black: #2b2523
 .navbar-item .icon
   color: $primary
 // Override for use of svg's from https://simpleicons.org/
+.navbar-item img
+  max-height: 100% !important
 .icon svg
   width: 1.5rem
-  height: 1.5rem
   fill: currentColor
 .navbar-brand .navbar-item.logo
-  padding: 0 1rem
+  padding: 0 0.3rem
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
